Removed the iterator design patter from the database class because it was causing unsolvable bugs.