@@ -26,12 +26,6 @@ public class IOHandler {
         return IOHandler.IOHandlerHolder.INSTANCE;
     }
 
-    public Database getUserDB() {
-        return userDatabase;
-    }
-    public Database getLeagueDB () {
-        return leagueDatabase;
-    }
 
     /*
      * This function is called when the game is initialized
@@ -58,6 +52,8 @@ public class IOHandler {
             League globalLeague = new League("Global League", "System");
             this.leagueDatabase.add(globalLeague);
         }
+
+
     }
 
 
@@ -97,34 +93,28 @@ public class IOHandler {
 
     /* Private class to handle the storing for the IOHandler */
     private static class Database {
-        private League[] leagues;
-        private User[] users;
-
-        private int leagueIndex = 0;
-        private int userIndex = 0;
+        private ArrayList<League> leagues = new ArrayList<>();
+        private ArrayList<User> users = new ArrayList<>();
 
         /* This function returns the Global League, which is always at index 0 in our Database. */
         public League getGlobalLeague() {
-            return LeagueIterator.getInstance(this.leagues).getFirst();
+            return leagues.get(0);
         }
 
         public void add(League league) {
-            league.setId(leagues.length);
-            LeagueIterator.getInstance(this.leagues).add(league, leagueIndex);
+            league.setId(this.leagues.size());
+            this.leagues.add(league);
         }
 
         public void add(User user) {
-            user.setId(users.length);
-            UserIterator.getInstance(this.users).add(user, userIndex);
+            user.setId(this.users.size());
+            this.users.add(user);
         }
 
         /* Return the user from database and return it if found, else return null */
         public User authenticateUser(String username, String password) {
-            UserIterator userIterator = UserIterator.getInstance(this.users);
-
-            while (userIterator.hasNext()) {
-                User user = userIterator.next();
-                if (user.getUsername().equals(username) && user.getPassword().equals(password))
+            for (User user: this.users) {
+                if (user.getUsername().equals(username) && password.equals(password))
                     return user;
             }
             return null;
@@ -133,93 +123,14 @@ public class IOHandler {
         /* Fetching user again from database to refresh the page*/
         public User getUser(int id) {
             for (User user: this.users) {
-                if (user.getId() == id) {
+                if (user.getId() == id)
                     return user;
-                }
             }
             return null;
         }
 
         public List<League> getLeagues() {
-            return new ArrayList<>(Arrays.asList(this.leagues));
-        }
-
-        /* Private inner league iterator class to implement the ITERATOR DESIGN PATTERN */
-        private static class LeagueIterator implements Iterator<League> {
-
-            private static League[] database;
-            private int index = 0;
-
-            private LeagueIterator() {
-            }
-
-            private static class LeagueIteratorHolder {
-                private static final LeagueIterator INSTANCE = new LeagueIterator();
-            }
-
-            public static LeagueIterator getInstance(League[] mydatabase) {
-                database = mydatabase;
-                return LeagueIterator.LeagueIteratorHolder.INSTANCE;
-            }
-
-
-            @Override
-            public boolean hasNext() {
-                if (database.length == index) {
-                    return false;
-                }
-                return true;
-            }
-
-            @Override
-            public League next() {
-                return database[index ++];
-            }
-
-            public League getFirst() {
-                return database[0];
-            }
-
-            public void add(League league, int leagueIndex) {
-                database[leagueIndex] = league;
-            }
-
-        }
-
-        /* Private inner User iterator class to implement the ITERATOR DESIGN PATTERN for the user */
-        private static class UserIterator implements Iterator<User> {
-
-            private static User[] database;
-            private int index = 0;
-
-            private UserIterator() {
-            }
-
-            private static class UserIteratorHolder {
-                private static final UserIterator INSTANCE = new UserIterator();
-            }
-
-            public static UserIterator getInstance(User[] mydatabase) {
-                database = mydatabase;
-                return UserIterator.UserIteratorHolder.INSTANCE;
-            }
-
-            @Override
-            public boolean hasNext() {
-                if (database.length == index) {
-                    return false;
-                }
-                return true;
-            }
-
-            @Override
-            public User next() {
-                return database[index ++];
-            }
-
-            public void add(User user, int userIndex) {
-                database[userIndex] = user;
-            }
+            return new ArrayList<>(this.leagues);
         }
 
     }
